deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-login-app
  labels:
    app: user-login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-login-app
  template:
    metadata:
      labels:
        app: user-login-app
    spec:
      containers:
      - name: user-login-app
        image: vinodhini21/user_login_app:latest
        ports:
        - containerPort: 3000
