deploymentservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-deployment
  labels:
    app: reactapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp
  template:
    metadata:
      labels:
        app: reactapp 
    spec:
      containers:
      - name: reactserver
        image: vinodhini21/user_login_app:latest
        ports:
        - containerPort: 3000
        
        
---

apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
spec:
  selector:
    app: reactapp 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
    nodePort: 31110
