service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-login-service
spec:
  selector:
    app: user-login-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
