ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vitest.uizb210.xyz
    secretName: letsencrypt-nginx
  rules:
    - host: vitest.uizb210.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-login-service 
                port:
                  number: 3000
